// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sections-search tool listing all sections in a project should handle project with no sections 1`] = `
"Sections in project empty-project-id: 0.
No results. Project has no sections yet; Use sections-manage to create sections."
`;

exports[`sections-search tool listing all sections in a project should list all sections when no search parameter is provided 1`] = `
"Sections in project 6cfCcrrCFg2xP94Q: 4.
Preview:
    To Do • id=section-123
    In Progress • id=section-456
    Done • id=section-789
    Backlog Items • id=section-999
Next:
- Use tasks-list-for-container with type=section to see tasks in any section
- Use sections-manage to modify section names or order"
`;

exports[`sections-search tool searching sections by name should filter sections by search term (case insensitive) 1`] = `
"Sections in project 6cfCcrrCFg2xP94Q matching "progress": 2.
Preview:
    In Progress • id=section-456
    Progress Review • id=section-999
Next:
- Use tasks-list-for-container with type=section to see tasks in any section
- Use sections-manage to modify section names or order
- Remove search parameter to see all sections in this project"
`;

exports[`sections-search tool searching sections by name should handle case sensitive search correctly 1`] = `
"Sections in project 6cfCcrrCFg2xP94Q matching "IMPORTANT": 1.
Preview:
    Important Tasks • id=section-123
Next:
- Use tasks-list-for-container with type=section and id=section-123 to see tasks
- Use sections-manage to create additional sections for organization
- Remove search parameter to see all sections in this project"
`;

exports[`sections-search tool searching sections by name should handle exact matches 1`] = `
"Sections in project 6cfCcrrCFg2xP94Q matching "done": 2.
Preview:
    Done • id=section-123
    Done Soon • id=section-456
Next:
- Use tasks-list-for-container with type=section to see tasks in any section
- Use sections-manage to modify section names or order
- Remove search parameter to see all sections in this project"
`;

exports[`sections-search tool searching sections by name should handle partial matches correctly 1`] = `
"Sections in project 6cfCcrrCFg2xP94Q matching "task": 2.
Preview:
    Development Tasks • id=section-123
    Testing Tasks • id=section-456
Next:
- Use tasks-list-for-container with type=section to see tasks in any section
- Use sections-manage to modify section names or order
- Remove search parameter to see all sections in this project"
`;

exports[`sections-search tool searching sections by name should handle search with no matches 1`] = `
"Sections in project 6cfCcrrCFg2xP94Q matching "nonexistent": 0.
No results. Try broader search terms; Check spelling; Remove search to see all sections."
`;
